book list functionality

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 <body>
     <div>
         <header class="header">
-
+            <h1 class="title">Hello Book Lovers!</h1>
         </header>
         <div class="main-container">
-            <div class="book-list-container">
+            <div class="book-list-header table">
+                <div>Id</div>
+                <div>Title</div>
+                <div>Price</div>
+                <div>Action</div>
+                <div>Action</div>
+            </div>
+            <div id="book-container" class="book-list-container">
 
             </div>
             <div class="selected-book-area">
@@ -23,7 +30,8 @@
         </footer>
     </div>
     <script src="view.js"></script>
-    <script src="books.js"></script>
+    <script src="dump.js"></script>
+    <script src="controller.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
