--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Monoton&display=swap" rel="stylesheet">
 </head>
 <body>
     <div>
         <header class="header">
             <h1 class="title">Hello Book Lovers!</h1>
         </header>
-        <div class="main-container">
-            <div class="book-list-header table">
-                <div>Id</div>
-                <div>Title</div>
-                <div>Price</div>
-                <div>Action</div>
-                <div>Action</div>
+        <div class="main-container">  
+            <div id="books-container" class="book-list-container">
+                <div class="book-list-header table">
+                    <div>Id</div>
+                    <div>Title</div>
+                    <div>Price</div>
+                    <div>Action</div>
+                    <div>Action</div>
+                </div>
+                <div id="book-list-container"></div>
+                <div id="pagination-controls" class="pagination"></div>
             </div>
-            <div id="book-container" class="book-list-container">
-
-            </div>
-            <div class="selected-book-area">
-
+            <div id="selected-book-area" class="selected-book-area">
+                <h1>Oops.. No book selected yet:(</h1>
             </div>
         </div>
         <footer class="footer">
